Update website: more fixed margins and padding, fixed mobile gallery arrows and removed thumbnails on project page nav, which also fixed pages that were too wide

--- a/css/style.css
+++ b/css/style.css
@@ -2413,19 +2413,74 @@ textarea {
 	  margin-right: -16px;
 	}
 
+/* Fit hero text properly */
+  .hero-container {
+    padding-left: 14px;
+	padding-right: 14px;
+  }
+
+  .hero-text {
+    max-width: 100%;
+  }
+
+  .hero-name {
+	  font-size: 140%;
+  }
+
+  .hero-title {
+    font-size: clamp(1.85rem, 8.5vw, 2.5rem);
+    line-height: 1.2;
+    word-break: break-word;
+  }
+  
+  .hero-blurb {
+	  font-size: 95%;
+  }
+  
+  .hero-arrow-text {
+	  font-size: 95%;
+  }
+  
 /* Widen hero blurb & make text slightly smaller */
   .page-hero-content {
     max-width: 100% !important;
     width: 100% !important;
-    padding-left: -40px;
-    padding-right: 8px;
-    margin-left: -22px;;
+    padding-left: 14px;
+    padding-right: 14px;
+    margin-left: 0px;
     margin-right: auto;
+  }
+  
+/* Other hero blurb margin and padding overrides */
+  .page-hero-text {
+	  padding: 0;
+  }
+  
+  .page-title, .blurb-and-logos, .page-hero-circle {
+	  margin: 0;
+  }
+  
+  .blurb-and-logos {
+	  padding: 0;
   }
   
   .page-hero-content p {
 	  font-size: 95%;
   }
+  
+  .hero-photo-text-container {
+	  padding: 0;
+  }
+  
+/* Remove nav images */
+  .project-nav img {
+	  display: none;
+  }
+
+/* Center nav */
+  .project-nav {
+	  margin-right: 0;
+  }  
 }
 
 /* ================= BACK TO TOP GLYPH FIX ================= */
@@ -2473,3 +2528,13 @@ textarea {
     display: block;
   }
 }
+
+/* Temp debug outline */
+* {
+  outline: 1px solid red;
+}
+
+/* Temp debug overflow hide */
+  html, body {
+    overflow-x: hidden !important;
+  }
